--- a/.eslintrc
+++ b/.eslintrc
@@ -8,12 +8,10 @@
 
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "plugins": [
     "@typescript-eslint",
-    "prettier",
     "standard"
   ],
   "parserOptions": {
