--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": " A patched version of ~ueokande's Playwright extension, for testing WebExtensions",
   "repository": "git@github.com:ator-dev/playwright-webextext.git",
   "author": "Shin'ya Ueoka <ueokande@i-beam.org>",
-  "contributors": [ "ator-dev <ator-dev@protonmail.com>" ],
+  "contributors": [
+    "ator-dev <ator-dev@protonmail.com>"
+  ],
   "license": "MIT",
   "packageManager": "pnpm@8.14.1",
   "engines": {
@@ -22,12 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-standard": "^5.0.0",
     "playwright": "^1.40.1",
     "playwright-core": "^1.40.1",
-    "prettier-eslint": "^16.2.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
