--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "playwright-webextext",
+  "name": "playwright-better-webext",
   "version": "0.1.0",
-  "description": " A patched version of ~ueokande's Playwright extension, for testing WebExtensions",
-  "repository": "git@github.com:ator-dev/playwright-webextext.git",
+  "description": " A fork of ~ueokande's playwright-webextext, for testing WebExtensions in Firefox and Chromium",
+  "repository": "git@github.com:ator-dev/playwright-better-webext.git",
   "author": "Shin'ya Ueoka <ueokande@i-beam.org>",
   "contributors": [
     "ator-dev <ator-dev@protonmail.com>"
