--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "description": " A fork of ~ueokande's playwright-webextext, for testing WebExtensions in Firefox and Chromium",
   "repository": "git@github.com:ator-dev/playwright-better-webext.git",
-  "author": "Shin'ya Ueoka <ueokande@i-beam.org>",
+  "author": "ator-dev <ator-dev@protonmail.com>",
   "contributors": [
-    "ator-dev <ator-dev@protonmail.com>"
+    "Shin'ya Ueoka <ueokande@i-beam.org>"
   ],
   "license": "MIT",
   "packageManager": "pnpm@8.14.1",
