--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
+    "eslint": "^9.18.0",
+    "globals": "^16.2.0",
     "playwright": "^1.40.1",
     "playwright-core": "^1.40.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.33.1"
   },
   "peerDependencies": {
     "@playwright/test": ">=1.0.0",
