--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,7 +10,8 @@
       "draft": false,
       "prerelease": false,
       "include-component-in-tag": false,
-      "include-v-in-tag": true
+      "include-v-in-tag": true,
+      "initial-version": "0.0.4"
     }
   }
 }
